--- a/admin.html
+++ b/admin.html
@@ -1,63 +1,70 @@
-
-
 <!DOCTYPE html>
 <html lang="th">
 <head>
 <meta charset="UTF-8">
-<title>ร้าน - เรียกคิว</title>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>ร้านเรียกคิว</title>
+
+<style>
+body{
+  font-family: system-ui, sans-serif;
+  background: linear-gradient(135deg,#667eea,#764ba2);
+  min-height:100vh;
+  display:flex;
+  justify-content:center;
+  align-items:center;
+  margin:0;
+}
+.card{
+  background:#fff;
+  width:320px;
+  padding:24px;
+  border-radius:16px;
+  text-align:center;
+  box-shadow:0 20px 40px rgba(0,0,0,.2);
+}
+h1{margin-top:0}
+button{
+  width:100%;
+  padding:14px;
+  margin-top:12px;
+  border:none;
+  border-radius:12px;
+  font-size:1rem;
+  cursor:pointer;
+}
+.create{background:#667eea;color:#fff}
+.call{background:#22c55e;color:#fff}
+#qr img{margin-top:16px;border-radius:12px}
+</style>
 </head>
+
 <body>
-
-<h1>ฝั่งร้าน</h1>
-<button onclick="createQueue()">สร้าง QR</button>
-<button onclick="callNext()">เรียกคิวถัดไป</button>
-
-<div id="qr"></div>
-
-<script src="firebase.js"></script>
+<div class="card">
+  <h1>ระบบเรียกคิว</h1>
+  <button class="create" id="create">สร้าง QR</button>
+  <button class="call" id="call">เรียกคิว</button>
+  <div id="qr"></div>
+</div>
 
 <script type="module">
-import {
-  collection, addDoc, query, where,
-  getDocs, updateDoc, orderBy, limit
-} from "https://www.gstatic.com/firebasejs/10.7.1/firebase-firestore.js";
+import { createQueue, callNextQueue } from "./firebase.js";
 
-const db = window.db;
+const qr = document.getElementById("qr");
 
-window.createQueue = async () => {
-  const token = Math.random().toString(36).slice(2,10);
-
-  await addDoc(collection(db, "queues"), {
-    token,
-    status: "waiting",
-    used: false,
-    createdAt: new Date()
-  });
-
+document.getElementById("create").onclick = async () => {
+  const token = await createQueue();
   const url = `${location.origin}/wait.html?token=${token}`;
-  document.getElementById("qr").innerHTML = `
+  qr.innerHTML = `
     <p>ให้ลูกค้าสแกน</p>
     <img src="https://api.qrserver.com/v1/create-qr-code/?size=200x200&data=${url}">
   `;
 };
 
-window.callNext = async () => {
-  const q = query(
-    collection(db, "queues"),
-    where("status", "==", "waiting"),
-    orderBy("createdAt"),
-    limit(1)
-  );
-
-  const snap = await getDocs(q);
-  if (snap.empty) return alert("ไม่มีคิวแล้ว");
-
-  await updateDoc(snap.docs[0].ref, {
-    status: "called",
-    used: true
-  });
+document.getElementById("call").onclick = async () => {
+  const t = await callNextQueue();
+  if (!t) alert("ไม่มีคิวแล้ว");
 };
 </script>
-
 </body>
 </html>
