--- a/admin.html
+++ b/admin.html
@@ -7,8 +7,8 @@
 
 <style>
 body{
-  font-family: system-ui, sans-serif;
-  background: linear-gradient(135deg,#667eea,#764ba2);
+  font-family:system-ui;
+  background:linear-gradient(135deg,#6366f1,#8b5cf6);
   min-height:100vh;
   display:flex;
   justify-content:center;
@@ -17,53 +17,61 @@ body{
 }
 .card{
   background:#fff;
-  width:320px;
   padding:24px;
+  width:320px;
   border-radius:16px;
   text-align:center;
   box-shadow:0 20px 40px rgba(0,0,0,.2);
 }
-h1{margin-top:0}
-button{
+button,input{
   width:100%;
-  padding:14px;
-  margin-top:12px;
-  border:none;
-  border-radius:12px;
+  padding:12px;
+  margin-top:10px;
   font-size:1rem;
-  cursor:pointer;
+  border-radius:10px;
+  border:1px solid #ddd;
 }
-.create{background:#667eea;color:#fff}
-.call{background:#22c55e;color:#fff}
-#qr img{margin-top:16px;border-radius:12px}
+button{
+  background:#6366f1;
+  color:white;
+  border:none;
+}
+#qr img{margin-top:12px}
 </style>
 </head>
 
 <body>
 <div class="card">
-  <h1>ระบบเรียกคิว</h1>
-  <button class="create" id="create">สร้าง QR</button>
-  <button class="call" id="call">เรียกคิว</button>
+  <h2>ระบบเรียกคิว</h2>
+
+  <button id="create">สร้าง QR คิวใหม่</button>
   <div id="qr"></div>
+
+  <input id="queueInput" type="number" placeholder="ใส่เลขคิวที่จะเรียก">
+  <button id="call">เรียกคิวนี้</button>
 </div>
 
 <script type="module">
-import { createQueue, callNextQueue } from "./firebase.js";
+import { createQueue, callQueueByNumber } from "./firebase.js";
 
 const qr = document.getElementById("qr");
 
 document.getElementById("create").onclick = async () => {
-  const token = await createQueue();
-  const url = `${location.origin}/wait.html?token=${token}`;
+  const num = await createQueue();
+  const url = `${location.origin}/wait.html?token=${num}`;
+
   qr.innerHTML = `
-    <p>ให้ลูกค้าสแกน</p>
+    <h3>คิว ${num}</h3>
     <img src="https://api.qrserver.com/v1/create-qr-code/?size=200x200&data=${url}">
   `;
 };
 
 document.getElementById("call").onclick = async () => {
-  const t = await callNextQueue();
-  if (!t) alert("ไม่มีคิวแล้ว");
+  const num = Number(document.getElementById("queueInput").value);
+  if (!num) return alert("ใส่เลขคิวก่อน");
+
+  const ok = await callQueueByNumber(num);
+  if (!ok) alert("คิวนี้ไม่มี หรือถูกเรียกไปแล้ว");
 };
 </script>
 </body>
