Update background colors and button text in admin.html

--- a/admin.html
+++ b/admin.html
@@ -8,7 +8,7 @@
 <style>
 body{
   font-family:system-ui;
-  background:linear-gradient(135deg,#6366f1,#8b5cf6);
+  background:linear-gradient(135deg,#4f46e5,#7c3aed);
   min-height:100vh;
   display:flex;
   justify-content:center;
@@ -29,14 +29,12 @@ button,input{
   margin-top:10px;
   font-size:1rem;
   border-radius:10px;
-  border:1px solid #ddd;
 }
 button{
-  background:#6366f1;
-  color:white;
   border:none;
+  background:#4f46e5;
+  color:#fff;
 }
-#qr img{margin-top:12px}
 </style>
 </head>
 
@@ -47,8 +45,8 @@ button{
   <button id="create">สร้าง QR คิวใหม่</button>
   <div id="qr"></div>
 
-  <input id="queueInput" type="number" placeholder="ใส่เลขคิวที่จะเรียก">
-  <button id="call">เรียกคิวนี้</button>
+  <input id="queueInput" type="number" placeholder="เลขคิวที่จะเรียก">
+  <button id="call">เรียกคิว</button>
 </div>
 
 <script type="module">
@@ -71,7 +69,7 @@ document.getElementById("call").onclick = async () => {
   if (!num) return alert("ใส่เลขคิวก่อน");
 
   const ok = await callQueueByNumber(num);
-  if (!ok) alert("คิวนี้ไม่มี หรือถูกเรียกไปแล้ว");
+  if (!ok) alert("คิวนี้ไม่มีแล้ว หรือเรียกไปแล้ว");
 };
 </script>
 </body>
